マップエディタに背景地図表示機能を追加した。
メインメニューの View / Show background map で表示の ON/OFF

--- a/crowdwalk/src/main/resources/quick_reference.html
+++ b/crowdwalk/src/main/resources/quick_reference.html
@@ -421,6 +421,12 @@
         </tr>
         <tr>
           <td>&emsp;</td>
+          <td>Show background map</td>
+          <td>&emsp;</td>
+          <td>背景地図を表示する(zone の指定が必要)</td>
+        </tr>
+        <tr>
+          <td>&emsp;</td>
           <td>Show background group</td>
           <td>&emsp;</td>
           <td>別のグループを背景に表示する</td>
