マップエディタに複数リンク選択時のリンク長再計算機能を追加した。
Edit Link モード > コンテキストメニュー > Recalculate link length

--- a/crowdwalk/src/main/resources/quick_reference.html
+++ b/crowdwalk/src/main/resources/quick_reference.html
@@ -605,6 +605,12 @@
         </tr>
         <tr>
           <td>&emsp;</td>
+          <td>Recalculate link length</td>
+          <td>&emsp;</td>
+          <td>選択したリンクの長さを再計算する</td>
+        </tr>
+        <tr>
+          <td>&emsp;</td>
           <td>Calculate scale and recalculate link length</td>
           <td>&emsp;</td>
           <td>選択したリンクに設定する長さに合わせてスケールを計算し、それに合わせてカレントグループの<br/>全リンクの長さも再設定する</td>
