編集画面を回転する機能を廃止して、代わりにマップが回転する様にした。

--- a/crowdwalk/src/main/resources/quick_reference.html
+++ b/crowdwalk/src/main/resources/quick_reference.html
@@ -41,13 +41,13 @@
           <td>&emsp;</td>
           <td>Alt + ホイール</td>
           <td>&emsp;</td>
-          <td>編集画面を回転させる</td>
+          <td>マップ表示を回転する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
           <td>Alt + Ctrl + ホイール</td>
           <td>&emsp;</td>
-          <td>編集画面を回転させる(1/10 ステップ)</td>
+          <td>マップ表示を回転する(1/10 ステップ)</td>
         </tr>
         <tr>
           <td>&emsp;</td>
@@ -129,7 +129,7 @@
           <td>&emsp;</td>
           <td>Shift + 左クリックでドラッグ</td>
           <td>&emsp;</td>
-          <td>選択したノードを移動する</td>
+          <td>選択中のノードが一つならばそのノードを移動する /<br/>選択中のノードが複数ならばドラッグ完了時にダイアログが表示され、移動かコピーかを選ぶことが出来る</td>
         </tr>
         <tr>
           <td>&emsp;</td>
@@ -357,7 +357,7 @@
           <td>&emsp;</td>
           <td>Centering with scaling</td>
           <td>&emsp;</td>
-          <td>マップ全体が表示される様にスケールを変更して表示位置を移動する</td>
+          <td>マップ全体が表示される様に表示位置とスケールを変更する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
@@ -369,13 +369,13 @@
           <td>&emsp;</td>
           <td>Set rotation</td>
           <td>&emsp;</td>
-          <td>編集画面の回転角度を数値入力する</td>
+          <td>角度(-180.0～180.0)を入力してマップ表示を回転する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
           <td>Reset rotation</td>
           <td>&emsp;</td>
-          <td>編集画面の回転をリセットする</td>
+          <td>マップ表示の回転をリセットする</td>
         </tr>
         <tr>
           <td>&emsp;</td>
