エディットモード、グループ選択、コンテキストメニューのキーボードショートカット機能を作成した。
表示モード関連のキーボードショートカットもいくつか設定した。

--- a/crowdwalk/src/main/resources/quick_reference.html
+++ b/crowdwalk/src/main/resources/quick_reference.html
@@ -17,7 +17,7 @@
     <table>
       <tbody>
         <tr>
-          <td class="item" colspan="4">共通 (Background Image モードを除く)</td>
+          <td class="item" colspan="4">共通 (Background Image モードでは一部異なる)</td>
         </tr>
         <tr>
           <td>&emsp;</td>
@@ -53,7 +53,25 @@
           <td>&emsp;</td>
           <td>Ctrl + A (テーブル)</td>
           <td>&emsp;</td>
-          <td>テーブルの全データを選択する</td>
+          <td>テーブルの全データを選択する(フィルタの影響を受ける)</td>
+        </tr>
+        <tr>
+          <td>&emsp;</td>
+          <td>アプリケーション・キー</td>
+          <td>&emsp;</td>
+          <td>コンテキスト・メニューを表示する</td>
+        </tr>
+        <tr>
+          <td>&emsp;</td>
+          <td>ファンクション・キー</td>
+          <td>&emsp;</td>
+          <td>編集モードを選択する</td>
+        </tr>
+        <tr>
+          <td>&emsp;</td>
+          <td>Shift + ファンクション・キー</td>
+          <td>&emsp;</td>
+          <td>カレントグループを選択する</td>
         </tr>
 
         <tr>
