ノードの移動・コピー関連のダイアログを一つに統合しマップの回転にも対応させた。

--- a/crowdwalk/src/main/resources/quick_reference.html
+++ b/crowdwalk/src/main/resources/quick_reference.html
@@ -311,7 +311,7 @@
         </tr>
         <tr>
           <td>&emsp;</td>
-          <td>New&nbsp;&nbsp;/&nbsp;&nbsp;Ctrl + N</td>
+          <td>New</td>
           <td>&emsp;</td>
           <td>マップデータを初期化する</td>
         </tr>
@@ -367,13 +367,13 @@
         </tr>
         <tr>
           <td>&emsp;</td>
-          <td>Centering</td>
+          <td>Centering&nbsp;&nbsp;/&nbsp;&nbsp;Ctrl + C</td>
           <td>&emsp;</td>
           <td>マップの中心が表示される様に表示位置を移動する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
-          <td>Centering with scaling</td>
+          <td>Centering with scaling&nbsp;&nbsp;/&nbsp;&nbsp;Ctrl + Shift + C</td>
           <td>&emsp;</td>
           <td>マップ全体が表示される様に表示位置とスケールを変更する</td>
         </tr>
@@ -397,49 +397,49 @@
         </tr>
         <tr>
           <td>&emsp;</td>
-          <td>Show nodes</td>
+          <td>Show nodes&nbsp;&nbsp;/&nbsp;&nbsp;Ctrl + N</td>
           <td>&emsp;</td>
           <td>ノードを表示する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
-          <td>Show node labels</td>
+          <td>Show node labels&nbsp;&nbsp;/&nbsp;&nbsp;Ctrl + Shift + N</td>
           <td>&emsp;</td>
           <td>ノードラベルを表示する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
-          <td>Show links</td>
+          <td>Show links&nbsp;&nbsp;/&nbsp;&nbsp;Ctrl + L</td>
           <td>&emsp;</td>
           <td>リンクを表示する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
-          <td>Show link labels</td>
+          <td>Show link labels&nbsp;&nbsp;/&nbsp;&nbsp;Ctrl + Shift + L</td>
           <td>&emsp;</td>
           <td>リンクラベルを表示する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
-          <td>Show areas</td>
+          <td>Show areas&nbsp;&nbsp;/&nbsp;&nbsp;Ctrl + R</td>
           <td>&emsp;</td>
           <td>エリアを表示する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
-          <td>Show area labels</td>
+          <td>Show area labels&nbsp;&nbsp;/&nbsp;&nbsp;Ctrl + Shift + R</td>
           <td>&emsp;</td>
           <td>エリアラベルを表示する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
-          <td>Show background image</td>
+          <td>Show background image&nbsp;&nbsp;/&nbsp;&nbsp;Ctrl + B</td>
           <td>&emsp;</td>
           <td>背景画像を表示する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
-          <td>Show background map</td>
+          <td>Show background map&nbsp;&nbsp;/&nbsp;&nbsp;Ctrl + M</td>
           <td>&emsp;</td>
           <td>背景地図を表示する(zone の指定が必要)</td>
         </tr>
@@ -541,15 +541,9 @@
         </tr>
         <tr>
           <td>&emsp;</td>
-          <td>Move</td>
+          <td>Copy or move</td>
           <td>&emsp;</td>
-          <td>選択したノードを移動する</td>
-        </tr>
-        <tr>
-          <td>&emsp;</td>
-          <td>Duplicate and move</td>
-          <td>&emsp;</td>
-          <td>選択したノードを複製して移動する</td>
+          <td>選択したノードを複製または移動する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
