ノードの水平・垂直整列機能をマップの回転に対応させた。

--- a/crowdwalk/src/main/resources/quick_reference.html
+++ b/crowdwalk/src/main/resources/quick_reference.html
@@ -531,13 +531,13 @@
           <td>&emsp;</td>
           <td>Align nodes horizontally</td>
           <td>&emsp;</td>
-          <td>カーソル上のノードを基準に選択ノードを水平にそろえる</td>
+          <td>選択した複数ノードをカーソル上のノードに合わせて水平に整列する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
           <td>Align nodes vertically</td>
           <td>&emsp;</td>
-          <td>カーソル上のノードを基準に選択ノードを垂直にそろえる</td>
+          <td>選択した複数ノードをカーソル上のノードに合わせて垂直に整列する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
