マップエディタにプロパティファイル読み込み機能を追加した。
File / Open properties または Ctrl+P でファイル選択ダイアログが開く。
プロパティファイルを読み込むと無効になっていたシミュレーション開始ボタンが有効になる。

--- a/crowdwalk/src/main/resources/quick_reference.html
+++ b/crowdwalk/src/main/resources/quick_reference.html
@@ -335,6 +335,12 @@
         </tr>
         <tr>
           <td>&emsp;</td>
+          <td>Open properties&nbsp;&nbsp;/&nbsp;&nbsp;Ctrl + P</td>
+          <td>&emsp;</td>
+          <td>プロパティファイルを読み込む</td>
+        </tr>
+        <tr>
+          <td>&emsp;</td>
           <td>Quit&nbsp;&nbsp;/&nbsp;&nbsp;Ctrl + Q</td>
           <td>&emsp;</td>
           <td>マップエディタを終了する</td>
