マップエディタとグラフィックシミュレータに、背景画像と背景地図の色の濃さ設定機能を追加した。
マップエディタの View / Set color depth of background image メニューで背景画像の色の濃さを切り替え。
View / Set color depth of background map メニューで背景地図の色の濃さを切り替え。
プロパティファイルの "color_depth_of_background_image" 項目で背景画像の色の濃さを設定。
"color_depth_of_background_map" 項目で背景地図の色の濃さを設定。

--- a/crowdwalk/src/main/resources/quick_reference.html
+++ b/crowdwalk/src/main/resources/quick_reference.html
@@ -445,9 +445,21 @@
         </tr>
         <tr>
           <td>&emsp;</td>
+          <td>Set color depth of background image</td>
+          <td>&emsp;</td>
+          <td>背景画像の色の濃さを設定する</td>
+        </tr>
+        <tr>
+          <td>&emsp;</td>
           <td>Show background map&nbsp;&nbsp;/&nbsp;&nbsp;Ctrl + M</td>
           <td>&emsp;</td>
-          <td>背景地図を表示する(zone の指定が必要)</td>
+          <td>背景地図を表示する(zone の設定が必要)</td>
+        </tr>
+        <tr>
+          <td>&emsp;</td>
+          <td>Set color depth of background map</td>
+          <td>&emsp;</td>
+          <td>背景地図の色の濃さを設定する</td>
         </tr>
         <tr>
           <td>&emsp;</td>
